--- a/ChatApp/MVVM/View/MainWindow.xaml
+++ b/ChatApp/MVVM/View/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:ChatApp" 
         xmlns:viewmodel="clr-namespace:ChatApp.MVVM.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" 
+        Height="474" 
+        Width="816">
     
     <Window.DataContext>
         <viewmodel:MainViewModel />
@@ -26,17 +28,27 @@
                     DockPanel.Dock="Top"
                     Content="Connect"
                     Command="{Binding ConnectToServerCommand}"/>
+            <ListView ItemsSource="{Binding Users}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Username}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </DockPanel>
 
         <StackPanel Grid.Column="1">
-            <ListView Height="380"/>
+            <ListView Height="380"
+                      ItemsSource="{Binding Messages}"/>
 
             <StackPanel Orientation="Horizontal">
                 <TextBox Height="55"
                            Width="545"
-                           VerticalContentAlignment="Center"/>
+                           VerticalContentAlignment="Center"
+                           Text="{Binding Message, UpdateSourceTrigger=PropertyChanged }"/>
                 <Button Width="55"
-                        Content="Send"/>
+                        Content="Send"
+                        Command="{Binding SendMessageCommand}"/>
             </StackPanel>
         </StackPanel>
     </Grid>
